<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Primer Fragmento</string>
    <string name="second_fragment_label">Segundo Fragmento</string>
    <string name="btnSave1">Cobrar</string>
    <string name="btnSupr">Borrar</string>
    <string name="btnCreate">Agregar</string>

    btnSave1
    <string name="previous">Previo</string>
    <string name="hello_first_fragment">Hola primer Fragmento</string>
    <string name="hello_second_fragment">Hola Segundo Fragmento. Arg: %1$s</string>
    <string name="checkLook"></string>
    <string name="textView1">Nombre del Item</string>
    <string name="textView2">Precio unitario</string>
    <string name="textView3">Cantidad</string>
    <string name="textView4">Subtotal</string>
    <string name="textView5">Total</string>
    <string name="button">Guardar</string>
    <string name="btnErase">Borrar</string>
    <string name="btnResum">Resumen</string>
    <string name="checkbox">¿Revisado?</string>
    <string name="editTextTask"></string>
    <string name="editTextTask2"></string>
    <string name="editTextTask3"></string>
    <string name="editTextTask4"></string>
    <string name="editTextTask5"></string>







</resources>