<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <EditText
        android:id="@+id/editTextTask2"
        android:layout_width="229dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="29dp"
        android:autofillHints=""
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTask"
        tools:text="@string/button" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="29dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnResum"
        app:layout_constraintStart_toEndOf="@+id/btnErase" />

    <Button
        android:id="@+id/btnResum"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="29dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnErase"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="29dp"
        android:text="@string/btnErase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:text="@string/checkbox"
        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
        app:layout_constraintStart_toStartOf="@+id/saveBtn" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="92dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:text="@string/textView1"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="92dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:text="@string/textView2"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="92dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:text="@string/textView3"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="92dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:text="@string/textView4"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="92dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:text="@string/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextTask"
        android:layout_width="229dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="29dp"
        android:autofillHints=""
        android:inputType="textShortMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/button" />

    <EditText
        android:id="@+id/editTextTask3"
        android:layout_width="229dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="29dp"
        android:autofillHints=""
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTask2"
        tools:text="@string/button" />

    <EditText
        android:id="@+id/editTextTask4"
        android:layout_width="229dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="29dp"
        android:autofillHints=""
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTask3"
        tools:text="@string/button" />

    <EditText
        android:id="@+id/editTextTask5"
        android:layout_width="229dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="29dp"
        android:autofillHints=""
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTask4"
        tools:text="@string/button" />
</androidx.constraintlayout.widget.ConstraintLayout>